# onnxruntime-inference

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  Makefile  README.md  benchmark.md  cuda_sm_det.sh  nsyc_detect.sh  valgrind.md
benchmark/: CMakeLists.txt  benchmark_config.yaml  benchmark_runner.cpp  benchmark_runner.h  benchmark_validation_checklist.md  main.cpp
cmake/: copy_dir_to_target.cmkae  copy_runtime_dlls.cmake  setup_spdlog.cmake
config/: Restorer.yaml  async_yolo_config.yaml  batch_yolo_config.yaml  model_config.yaml  sync_yolo_config.yaml
examples/: CMakeLists.txt
examples/restorer_demo/: CMakeLists.txt  NAFNet_demo.cpp
examples/yaml_usage/: CMakeLists.txt  yaml_use.cpp
examples/yaml_usage/config/: config.yaml
examples/yolo_infer/: CMakeLists.txt  batch_yolo_infer.cpp  logger_test.cpp  mini_batch_infer.cpp  scheduler_infer.cpp  video_infer.cpp  yolo_infer.cpp
examples/yolov8_infer_demo/: CMakeLists.txt  yolov8_infer_demo.cpp
examples/yolov8_infer_demo/include/: OnnxInfer.h  yolov8_infer.h
include/: BufferPool.h  ModelConfig.h  OnnxInfer.h  ScopedTimer.h  TensorBuffer.h  Timer.h  nonecopyable.h  registry.h  yolov8_infer.h
include/arch/: arch.h
include/backend/: InferenceBackend.h  OrtSessionWrapper.h
include/device/: CudaStreamPool.h  InferTensorBufferPool.h  cuda_stream_deleter.h  cuda_utils.h  gpu_filter.h  gpu_preprocess.h
include/logger/: logger.cpp  logger.h
include/preprocess/: utils.h
include/queue/: SPSCQueue.h
include/runner/: ModelRunner.h
include/runner/detect/: Detector.h  YoloDetector.h
include/runner/detect/visual/: painter.h
include/runner/image_restoration/: NAFNet.h  Restorer.h
include/scheduler/: AsyncScheduler.h  BatchScheculer.h  BatchScheduler.h  InferenceScheduler.h  SyncScheduler.h
include/scheduler/executor/: ConcurrentExecutor.h  Executor.h  SyncExecutor.h
include/scheduler/stage/: Stage.h
include/scheduler/type_trait/: runner_type_trait.h
include/thread/: ObjectPool.h  ThreadPool.h  ThreadSafeQueue.h
scripts/: bench_test.sh  plot_benchmark.py
src/: BufferPool.cpp  main.cpp  yolov8_infer_demo.cpp
src/backend/: InferenceBackend.cpp  OrtSessionWrapper.cpp
src/device/: gpu_filter.cu  gpu_preprocess.cu
src/preprocess/: utils.cpp
src/runner/: ModelRunner.cpp
src/runner/detect/: Detector.cpp  YoloDetector.cpp
src/runner/image_restoration/: NAFNet.cpp  Restorer.cpp
src/scheduler/: AsyncScheduler.cpp  BatchScheduler.cpp  InferenceScheduler.cpp  SyncScheduler.cpp
src/scheduler/stage/: Stage.cpp
tests/: CMakeLists.txt  batch_scheduler_test.cpp  buffer_pool_test.cpp
